Slight alignment issue fix

--- a/css/bundle/os-mt-core.css
+++ b/css/bundle/os-mt-core.css
@@ -879,7 +879,7 @@ button,input,select,textarea {
 
 .os-note p {
     margin-block-start: 0px !important;
-    margin-bottom: 10px !important;
+    margin-bottom: 8px !important;
     font-size: 14px !important;
     color: #505050 !important;
 }
